[gd_scene load_steps=17 format=2]

[ext_resource path="res://MainMenu/Start_Hover.png" type="Texture" id=1]
[ext_resource path="res://MainMenu/Quit_Normal.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/Controls_Normal.png" type="Texture" id=3]
[ext_resource path="res://MainMenu/Start_Normal.png" type="Texture" id=4]
[ext_resource path="res://MainMenu/Start_Pressed.png" type="Texture" id=5]
[ext_resource path="res://MainMenu/Quit_Pressed.png" type="Texture" id=6]
[ext_resource path="res://MainMenu/Quit_Hover.png" type="Texture" id=7]
[ext_resource path="res://MainMenu/Controls_Pressed.png" type="Texture" id=8]
[ext_resource path="res://MainMenu/Controls_Hover.png" type="Texture" id=9]
[ext_resource path="res://Art/InstructionsScreen_screen.png" type="Texture" id=10]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=11]
[ext_resource path="res://titleLogo-01.png" type="Texture" id=12]
[ext_resource path="res://SFX/Volume.tscn" type="PackedScene" id=13]
[ext_resource path="res://PerituneMaterial_Amenoshita2.mp3" type="AudioStream" id=14]
[ext_resource path="res://Font/go3v2.ttf" type="DynamicFontData" id=15]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 15 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 11 )

[node name="InstructionsScreenScreen" type="Sprite" parent="."]
position = Vector2( 960, 529 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 1047.0
margin_top = 239.0
margin_right = 3547.0
margin_bottom = 739.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="TextureButton" parent="."]
margin_left = 1038.0
margin_top = 469.0
margin_right = 3538.0
margin_bottom = 969.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 1023.0
margin_top = 688.0
margin_right = 3523.0
margin_bottom = 1188.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="."]
visible = false
margin_left = 408.0
margin_top = 632.0
margin_right = 922.0
margin_bottom = 1034.0
custom_fonts/font = SubResource( 3 )
text = "Move Left --- A
Move Right - D
Jump ----- Space Bar
Attack - Left Mouse
Roll ----- Right Mouse
Pause --- Escape"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" parent="Controls" instance=ExtResource( 13 )]
margin_left = -139.0
margin_top = -78.0
margin_right = 396.0
margin_bottom = 0.0

[node name="TitleLogo-01" type="Sprite" parent="."]
position = Vector2( 664, 277 )
texture = ExtResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -18.0
autoplay = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
